tests/toylang/neg/001087_mutation.toylang
program a = { if a then sleep var a : bool; } .
